--- a/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-dictionary-details.tpl.html
+++ b/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-dictionary-details.tpl.html
@@ -6,24 +6,45 @@
                     <div class="form-group">
                         <div class="column">
                             <div class="form-group __info list">
-                                <label class="form-label">{{ 'imageTools.blades.setting-detail.labels.name' | translate }}</label>
+                                <label class="form-label">{{ 'catalog.blades.property-dictionary.labels.alias' | translate }}</label>
                                 <div class="form-input">
                                     <input ng-class="{'error': detailForm.name.$invalid && !detailForm.name.$pristine}" required placeholder="{{ 'imageTools.blades.setting-detail.placeholders.name' | translate }}"
                                         class="form-control" ng-model="blade.currentEntity.alias" name="alias" type="text" />
                                 </div>
-                                <div class="list-descr">{{ 'imageTools.blades.setting-detail.discription.name' | translate }}</div>
+                                <div class="list-descr">{{ 'catalog.blades.property-dictionary.labels.alias-description' | translate }}</div>
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="column">
                             <div class="form-group __info list">
-                                <label class="form-label">{{ 'imageTools.blades.setting-detail.labels.name' | translate }}</label>
+                                <label class="form-label">{{ 'catalog.blades.property-dictionary.languages.english' | translate }}</label>
                                 <div class="form-input">
                                     <input ng-class="{'error': detailForm.name.$invalid && !detailForm.name.$pristine}" required placeholder="{{ 'imageTools.blades.setting-detail.placeholders.name' | translate }}"
                                         class="form-control" ng-model="blade.currentEntity.value" name="value" type="text" />
                                 </div>
-                                <div class="list-descr">{{ 'imageTools.blades.setting-detail.discription.name' | translate }}</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="column">
+                            <div class="form-group __info list">
+                                <label class="form-label">{{ 'catalog.blades.property-dictionary.languages.german' | translate }}</label>
+                                <div class="form-input">
+                                    <input ng-class="{'error': detailForm.name.$invalid && !detailForm.name.$pristine}" required placeholder="{{ 'imageTools.blades.setting-detail.placeholders.name' | translate }}"
+                                        class="form-control" ng-model="blade.currentEntity.value" name="value" type="text" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="column">
+                            <div class="form-group __info list">
+                                <label class="form-label">{{ 'catalog.blades.property-dictionary.languages.russian' | translate }}</label>
+                                <div class="form-input">
+                                    <input ng-class="{'error': detailForm.name.$invalid && !detailForm.name.$pristine}" required placeholder="{{ 'imageTools.blades.setting-detail.placeholders.name' | translate }}"
+                                        class="form-control" ng-model="blade.currentEntity.value" name="value" type="text" />
+                                </div>
                             </div>
                         </div>
                     </div>
