--- a/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-list.tpl.html
+++ b/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-list.tpl.html
@@ -1,20 +1,22 @@
-﻿<div class="blade-static __bottom" ng-include="'Modules/$(VirtoCommerce.Catalog)/Scripts/blades/common/templates/ok-cancel.tpl.html'"></div>
+<div class="blade-static __bottom" ng-include="'Modules/$(VirtoCommerce.Catalog)/Scripts/blades/common/templates/ok-cancel.tpl.html'"></div>
 <div class="blade-content __gray">
     <div class="blade-inner">
         <div class="inner-block">
             <form name="propertiesForm" class="form">
                 <fieldset ng-repeat="propGroup in blade.propGroups" ng-init="setForm(propertiesForm)">
                     <legend>
-                        {{ propGroup.title | translate }}: <span class="count">{{properties.length | number:0}}</span>
+                        {{ propGroup.title | translate }}: <span class="count">{{selectedCount(properties) | number:0}}</span>
                     </legend>
                     <div class="form-group list __info" ng-repeat="prop in properties = (blade.currentEntities | filter: {type:propGroup.type})">
-                        <label class="form-label">
+                        <label class="form-label" ng-if="prop.isSelected || prop.isChanged">
                             {{prop.name}} {{ getPropertyDisplayName(prop) ? '(' + getPropertyDisplayName(prop) + ')' : '' }}
+                            <span ng-if="prop.isChanged">*</span>
                             <a href="" ng-click="editProperty(prop)" class="form-edit">
                                 <i class="form-ico fa fa-pencil"></i>
                             </a>
+
                         </label>
-                        <va-property2 ng-model="prop" get-prop-values="getPropValues" ng-if="!prop.isReadOnly" languages="blade.languages" default-language="blade.defaultLanguage"></va-property2>
+                        <va-property2 ng-model="prop" get-prop-values="getPropValues" ng-if="!prop.isReadOnly && (prop.isSelected || prop.isChanged)" languages="blade.languages" default-language="blade.defaultLanguage"></va-property2>
                     </div>
                     <div class="note" ng-if="properties.length == 0">{{ 'catalog.blades.property-list.labels.empty-list' | translate }}</div>
                 </fieldset>
