--- a/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-list.tpl.html
+++ b/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-list.tpl.html
@@ -5,12 +5,11 @@
             <form name="propertiesForm" class="form">
                 <fieldset ng-repeat="propGroup in blade.propGroups" ng-init="setForm(propertiesForm)">
                     <legend>
-                        {{ propGroup.title | translate }}: <span class="count">{{selectedCount(properties) | number:0}}</span>
+                        {{ propGroup.title | translate }}: <span class="count">{{(blade.currentEntities | filter: {type:propGroup.type}).length | number:0}}</span>
                     </legend>
-                    <div class="form-group list __info" ng-repeat="prop in properties = (blade.currentEntities | filter: {type:propGroup.type})">
-                        <label class="form-label" ng-if="prop.isSelected || prop.isChanged">
+                    <div class="form-group list __info" ng-repeat="prop in properties = (blade.currentEntities | filter: {type:propGroup.type, isChanged:false})">
+                        <label class="form-label" ng-if="prop.isSelected">
                             {{prop.name}} {{ getPropertyDisplayName(prop) ? '(' + getPropertyDisplayName(prop) + ')' : '' }}
-                            <span ng-if="prop.isChanged">*</span>
                             <a href="" ng-click="editProperty(prop)" class="form-edit">
                                 <i class="form-ico fa fa-pencil"></i>
                             </a>
@@ -19,6 +18,18 @@
                         <va-property2 ng-model="prop" get-prop-values="getPropValues" ng-if="!prop.isReadOnly && (prop.isSelected || prop.isChanged)" languages="blade.languages" default-language="blade.defaultLanguage"></va-property2>
                     </div>
                     <div class="note" ng-if="properties.length == 0">{{ 'catalog.blades.property-list.labels.empty-list' | translate }}</div>
+                    <legend ng-if="modifiedProperties.length > 0">
+                        <span>{{'catalog.blades.property-list.labels.modified' | translate }}</span>   <span class="count">{{modifiedProperties.length | number:0}}</span>
+                    </legend>
+                    <div class="form-group list __info" ng-repeat="prop in modifiedProperties = (blade.currentEntities | filter: {type:propGroup.type, isChanged:true})">
+                        <label class="form-label">
+                            {{prop.name}} {{ getPropertyDisplayName(prop) ? '(' + getPropertyDisplayName(prop) + ')' : '' }}
+                            <a href="" ng-click="editProperty(prop)" class="form-edit">
+                                <i class="form-ico fa fa-pencil"></i>
+                            </a>
+                        </label>
+                        <va-property2 ng-model="prop" get-prop-values="getPropValues" ng-if="!prop.isReadOnly && (prop.isSelected || prop.isChanged)" languages="blade.languages" default-language="blade.defaultLanguage"></va-property2>
+                    </div>
                 </fieldset>
             </form>
         </div>
